--- a/warehouseapp/app/src/main/res/layout/item_layout.xml
+++ b/warehouseapp/app/src/main/res/layout/item_layout.xml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="5dp">
 
-    <TableRow>
-        <TextView
-            android:id="@+id/txtNote"
-            android:textSize="16dp"
-            android:padding="10dp"
-            android:gravity="center"
-            android:layout_column="1"
-            android:layout_width="wrap_content"/>
-        <TextView
-            android:id="@+id/txtIn"
-            android:textSize="16dp"
-            android:padding="10dp"
-            android:gravity="center"
-            android:layout_column="1"
-            android:layout_width="wrap_content"/>
-        <TextView
-            android:id="@+id/txtOut"
-            android:textSize="16dp"
-            android:padding="10dp"
-            android:gravity="center"
-            android:layout_column="1"
-            android:layout_width="wrap_content"/>
-        <TextView
-            android:id="@+id/txtStock"
-            android:textSize="16dp"
-            android:padding="10dp"
-            android:gravity="center"
-            android:layout_column="1"
-            android:layout_width="wrap_content"/>
-    </TableRow>
+    <TextView
+        android:id="@+id/txtNote"
+        android:textSize="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ItemPoId : ajlksjd;lksadsad"
+        android:layout_marginBottom="5dp"/>
 
-</TableLayout>
+    <TextView
+        android:id="@+id/txtDate"
+        android:textSize="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:layout_below="@id/txtNote"
+        android:text="Date : 12-12-2021"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/txtStock"
+        android:textSize="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stock : 123321"
+        android:textStyle="bold"
+        android:layout_below="@id/txtDate"
+        android:layout_marginBottom="5dp"/>
+
+</RelativeLayout>
