save server url in sharedPreferences

--- a/warehouseapp/app/src/main/res/layout/activity_main.xml
+++ b/warehouseapp/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,14 @@
         android:text="Scan Now"
         android:textSize="30sp"/>
 
+    <Button
+        android:id="@+id/btnConfig"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Config"
+        android:textSize="30sp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"/>
+
 </RelativeLayout>
